// Copyright 2024 Gravitational, Inc
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package teleport.machineid.v1;

import "teleport/trait/v1/trait.proto";

option go_package = "github.com/gravitational/teleport/api/gen/proto/go/teleport/machineid/v1;machineidv1";

// GitLabJoinAttributes is the attribute set produced by the `github` join method.
message GitHubJoinAttributes {
  string repository = 1;
  string environment = 2;
  string workflow = 3;
}

// TODO
message GitlabJoinAttributes {
  string user_login = 1;
  string project_path = 2;
  string namespace_path = 3;
  string environment = 4;
  string sha = 5;
  string pipeline_source = 6;
  string pipeline_id = 7;
  string ref = 8;
  string ref_type = 9;
  int64 runner_id = 10;
}

// JoinAttributes holds attributes sourced from attestation that occurs during
// the teleport join process.
message JoinAttributes {
  GitHubJoinAttributes github = 1;
  GitlabJoinAttributes gitlab = 2;
}

// Attributes holds attributes describing a workload identity, it is made up
// from information from multiple sources such as the join process and the
// any workload attestation.
message Attributes {
  JoinAttributes join = 1;
  repeated teleport.trait.v1.Trait traits = 2;
}
